Now supports ussage of a regex pattern match for resource keys

--- a/test/fixtures/Resources.resx
+++ b/test/fixtures/Resources.resx
@@ -120,4 +120,7 @@
   <data name="WindowTitle_Contacts" xml:space="preserve">
     <value>Contacts</value>
   </data>
+  <data name="PageTitle_Address" xml:space="preserve">
+    <value>Address</value>
+  </data>
 </root>
