--- a/test/fixtures/Resources.nl-NL.resx
+++ b/test/fixtures/Resources.nl-NL.resx
@@ -120,4 +120,7 @@
   <data name="WindowTitle_Contacts" xml:space="preserve">
     <value>Contacten</value>
   </data>
+  <data name="PageTitle_Address" xml:space="preserve">
+    <value>Adres</value>
+  </data>
 </root>
